# codex-mcp-skills

./: .gitignore  .markdownlint.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  audit.toml
.github/workflows/: audit.yml  book-pages.yml  ci.yml  dependency-monitor.yml  integration-tests.yml  publish-dry-run.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  autoload.md  changelog.md  cli.md  comparison.md  development.md  faq.md  installation.md  mcp-token-optimization.md  observability.md  overview.md  performance.md  persistence.md  playbooks.md  process.md  prompt-loading.md  rate-limits.md  release.md  runtime-tuning.md  security.md  semver.md  testing.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: sync_all.rs
crates/core/: Cargo.toml
crates/discovery/: Cargo.toml  README.md
crates/server/: Cargo.toml
crates/state/: Cargo.toml
crates/sync/: Cargo.toml
crates/sync/src/: common.rs  lib.rs  orchestrator.rs  report.rs
crates/sync/src/adapters/: claude.rs  codex.rs  mod.rs  traits.rs
crates/sync/tests/: sync_integration.rs  sync_skip_existing_tests.rs
docs/: CHANGELOG.md  FAQ.md  codex-agents-template.md  demo-claude-hooks.md  dependencies.md  mcp-token-optimization.md  persistence.md  process-guidelines.md  prompt-skill-loading.md  release-artifacts.md  runtime-options.md  security.md  semver-policy.md  threat-model.md
githooks/: pre-commit
scripts/: install-codex-skills.sh  install-git-hooks.sh  install-skrills.sh  install.ps1  install.sh  lint-markdown.sh  publish_crates.sh
(+27 files in other folders)
