[package]
name = "skrills"
version = "0.3.0"
edition = "2021"
description = "A command-line interface and MCP server for managing local SKILL.md files."
license = "MIT"
repository = "https://github.com/athola/skrills"
homepage = "https://github.com/athola/skrills"
documentation = "https://github.com/athola/skrills/tree/master/book"
readme = "README.md"
keywords = ["mcp", "cli", "skills", "agents", "codex"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
skrills-server = { path = "../server", version = "0.3.0" }
anyhow.workspace = true
