[package]
name = "skrills_sync"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
